Tweak quantiles for similar node population sizes

--- a/code/06_poi_experiments.ipynb
+++ b/code/06_poi_experiments.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-11  \n",
-    "Last modified: 2025-08-13"
+    "Last modified: 2025-08-14"
    ]
   },
   {
@@ -31,13 +31,14 @@
     "### Experimental setups\n",
     "1. Add POIs to random nodes\n",
     "2. Add POIs to nodes in H3 grid cells with lowest water densities (q0.15)\n",
-    "3. Add POIs to nodes in H3 grid cells with lowest loop density (q0.15)\n",
-    "4. Add POIs to nodes in H3 grid cells with highest node density (q0.15)\n",
+    "3. Add POIs to nodes in H3 grid cells with lowest loop density (q0.30 to get more nodes)\n",
+    "4. Add POIs to nodes in H3 grid cells with highest node density (q0.10)\n",
     "5. Add POIs to nodes in H3 grid cells with lowest water densities (q0.5), and of those lowest loops (q0.5), and of those highest node density (q0.5).\n",
     "\n",
-    "All setups limited to the same number of cells (but different number of nodes). A POI added to a node will snap to all adjacent links.\n",
+    "Setups are limited to different numbers of cells due to varying node densities. A POI added to a node will snap to all adjacent links.\n",
     "\n",
-    "Performance metrics: \n",
+    "Performance metrics:  \n",
+    "Compare results in the range baseline (no node gets a POI) --- best possible (all nodes get a POI)\n",
     "1. Increase the percent of zero-loop nodes (improvement from 29%)\n",
     "2. Decrease the number of cells with zero loop bits?"
    ]
@@ -115,17 +116,17 @@
    "source": [
     "experiment_setups = {\n",
     "    \"random\": {},\n",
-    "    \"wpq15\": {},\n",
-    "    \"lbq15\": {},\n",
-    "    \"ndq15\": {},\n",
-    "    \"wplbndq50\": {},\n",
+    "    \"waterprovision\": {},\n",
+    "    \"loopbits\": {},\n",
+    "    \"nodedensity\": {},\n",
+    "    \"wplbnd\": {},\n",
     "}\n",
     "experiment_results = {\n",
     "    \"random\": {},\n",
-    "    \"wpq15\": {},\n",
-    "    \"lbq15\": {},\n",
-    "    \"ndq15\": {},\n",
-    "    \"wplbndq50\": {},\n",
+    "    \"waterprovision\": {},\n",
+    "    \"loopbits\": {},\n",
+    "    \"nodedensity\": {},\n",
+    "    \"wplbnd\": {},\n",
     "}\n",
     "addpoisnums = [1000]  # Number of POIs to add in each experiment\n",
     "runsperexperiment = 10  # Number of runs per experiment"
@@ -403,23 +404,23 @@
     "q_wp15 = gdfjoined[gdfjoined[\"Water provision\"].le(q[0.15])]\n",
     "q_wp50 = gdfjoined[gdfjoined[\"Water provision\"].le(q[0.5])]\n",
     "\n",
-    "q = gdfjoined[\"Loop bits\"].quantile([0.15])  # Bottom 15% loop bits\n",
-    "q_lb15 = gdfjoined[gdfjoined[\"Loop bits\"].le(q[0.15])]\n",
+    "q = gdfjoined[\"Loop bits\"].quantile([0.30])  # Bottom 30% loop bits\n",
+    "q_lb30 = gdfjoined[gdfjoined[\"Loop bits\"].le(q[0.30])]\n",
     "\n",
-    "q = gdfjoined[\"Node density\"].quantile([0.85])  # Top 15% node density\n",
-    "q_nd15 = gdfjoined[gdfjoined[\"Node density\"].ge(q[0.85])]\n",
+    "q = gdfjoined[\"Node density\"].quantile([0.9])  # Top 10% node density\n",
+    "q_nd10 = gdfjoined[gdfjoined[\"Node density\"].ge(q[0.9])]\n",
     "\n",
     "q = q_wp50[\"Loop bits\"].quantile([0.5])  # Bottom 50% loop bits\n",
     "q_wplb50 = q_wp50[q_wp50[\"Water provision\"].le(q[0.5])]\n",
     "q = q_wplb50[\"Node density\"].quantile([0.5])  # Top 50% node density\n",
-    "q_wplbnd50 = q_wplb50[q_wplb50[\"Node density\"].ge(q[0.5])]\n",
+    "q_wplbnd = q_wplb50[q_wplb50[\"Node density\"].ge(q[0.5])]\n",
     "\n",
-    "# Clip to same lengths, by smallest water provisions\n",
-    "numcells = min(len(q_nd15), len(q_wp15), len(q_lb15), len(q_wplbnd50))\n",
-    "q_nd15 = q_nd15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
-    "q_wp15 = q_wp15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
-    "q_lb15 = q_lb15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
-    "q_wplbnd50 = q_wplbnd50.nsmallest(n=numcells, columns=[\"Water provision\"])"
+    "# Clip to lengths to get similar node population, by smallest water provisions\n",
+    "numcells = min(len(q_nd10), len(q_wp15), len(q_lb30), len(q_wplbnd))\n",
+    "q_nd10 = q_nd10.nsmallest(n=int(numcells * 0.5), columns=[\"Water provision\"])\n",
+    "q_wp15 = q_wp15.nsmallest(n=int(numcells * 1.5), columns=[\"Water provision\"])\n",
+    "# q_lb15 = q_lb15.nsmallest(n=numcells, columns=[\"Water provision\"])\n",
+    "q_wplbnd = q_wplbnd.nsmallest(n=int(numcells * 0.75), columns=[\"Water provision\"])"
    ]
   },
   {
@@ -446,17 +447,17 @@
     "axes[1].set_ylim([54.5, 57.8])\n",
     "axes[1].set_xlim([8, 12.8])\n",
     "\n",
-    "q_lb15.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[2])\n",
-    "axes[2].set_title(\"Loop bits+1, loop bits q15\")\n",
+    "q_lb30.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[2])\n",
+    "axes[2].set_title(\"Loop bits+1, loop bits q30\")\n",
     "axes[2].set_ylim([54.5, 57.8])\n",
     "axes[2].set_xlim([8, 12.8])\n",
     "\n",
-    "q_nd15.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[0])\n",
-    "axes[0].set_title(\"Loop bits+1, node density q15\")\n",
+    "q_nd10.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[0])\n",
+    "axes[0].set_title(\"Loop bits+1, node density q10\")\n",
     "axes[0].set_ylim([54.5, 57.8])\n",
     "axes[0].set_xlim([8, 12.8])\n",
     "\n",
-    "q_wplbnd50.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[3])\n",
+    "q_wplbnd.plot(column=\"Loop bits\", figsize=(5, 5), legend=True, ax=axes[3])\n",
     "axes[3].set_title(\"Loop bits+1, wplbnd q50\")\n",
     "axes[3].set_ylim([54.5, 57.8])\n",
     "axes[3].set_xlim([8, 12.8]);"
@@ -470,10 +471,10 @@
    "outputs": [],
    "source": [
     "experiment_setups[\"random\"][\"cellpopulation\"] = nodesh3\n",
-    "experiment_setups[\"wpq15\"][\"cellpopulation\"] = q_wp15\n",
-    "experiment_setups[\"lbq15\"][\"cellpopulation\"] = q_lb15\n",
-    "experiment_setups[\"ndq15\"][\"cellpopulation\"] = q_nd15\n",
-    "experiment_setups[\"wplbndq50\"][\"cellpopulation\"] = q_wplbnd50\n",
+    "experiment_setups[\"waterprovision\"][\"cellpopulation\"] = q_wp15\n",
+    "experiment_setups[\"loopbits\"][\"cellpopulation\"] = q_lb30\n",
+    "experiment_setups[\"nodedensity\"][\"cellpopulation\"] = q_nd10\n",
+    "experiment_setups[\"wplbnd\"][\"cellpopulation\"] = q_wplbnd\n",
     "\n",
     "for k in (\n",
     "    experiment_setups.keys()\n",
@@ -571,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for experimentid in [\"wplbndq50\"]:  # experiment_results.keys():\n",
+    "for experimentid in [\"wplbnd\"]:  # experiment_results.keys():\n",
     "    for poistoadd in addpoisnums:\n",
     "        for run in [0]:  # range(runsperexperiment):\n",
     "            # Step 1: Add additional POIs from node samples\n",
@@ -696,6 +697,7 @@
     "    density=False,\n",
     "    linewidth=0.5,\n",
     ")\n",
+    "print(N)\n",
     "\n",
     "patches[0].set_edgecolor(PLOTPARAM[\"color\"][\"neutral\"])\n",
     "for i in range(xmax):\n",
