Simplify restrict_scenario and finish water tests

--- a/code/testdump.ipynb
+++ b/code/testdump.ipynb
@@ -675,9 +675,9 @@
    "id": "d05335c0-b1d8-492c-8873-7874cc8cdfea",
    "metadata": {},
    "source": [
-    "Expected water profile for nx loop 012: empty\n",
-    "Expected water profile for nx loop 0123: 18000, 13000\n",
-    "Expected water profile for nx loop 0213: 21500, 11500"
+    "Expected water profile for nx loop 012: empty  \n",
+    "Expected water profile for nx loop 0123: 18000, 13000  \n",
+    "Expected water profile for nx loop 0213: 21500, 11500  "
    ]
   },
   {
@@ -688,6 +688,259 @@
    "outputs": [],
    "source": [
     "allloops_dict[SCENARIOID][0][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e187106-63dc-49f3-9d53-162601d5e623",
+   "metadata": {},
+   "source": [
+    "Expected loops: none"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be1854ec-06f0-4f3a-b228-57d261308e37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_dict[SCENARIOID][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "835c0b0e-f640-4611-8b5d-ce5da4178d0f",
+   "metadata": {},
+   "source": [
+    "### Adding two POIs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b9f88da-5041-40cc-a495-983d6e6e715e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois_orig.drop(pois_orig.index, inplace=True)\n",
+    "new_pois = gpd.GeoDataFrame(\n",
+    "    {\n",
+    "        \"category\": [\"facility\", \"facility\"],\n",
+    "        \"geometry\": [\n",
+    "            Point([(600000, 592000)]),\n",
+    "            Point([(603000, 600000)]),\n",
+    "        ],\n",
+    "    }\n",
+    ")\n",
+    "pois_orig = gpd.GeoDataFrame(pd.concat([pois_orig, new_pois], ignore_index=True))\n",
+    "pois_orig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71e44103-e340-4ffb-99e4-d031b71d7b90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois_snapped = snap_pois(pois_orig, edges)\n",
+    "pois_snapped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d2251a8-d124-4836-bd6e-1ac8130160ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges = update_poi_attributes(edges, pois_snapped)\n",
+    "edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7f922bb-d932-4b92-9545-9cd6b138a05e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gnx = momepy.gdf_to_nx(edges, approach=\"primal\", integer_labels=True, multigraph=False)\n",
+    "allloops, alllooplengths, allloopnumnodes, allloopmaxslopes = get_allloops_nx(Gnx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04585dd1-3186-4730-a4b1-54fb98b20d33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCENARIOID = 2\n",
+    "allloops_dict[SCENARIOID][0] = restrict_scenario(allloops, allloops, level=0)\n",
+    "allloops_dict[SCENARIOID][1] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][0], level=1\n",
+    ")\n",
+    "allloops_dict[SCENARIOID][2] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][1], level=2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23c61e09-57cd-42c4-af24-a7ab61536656",
+   "metadata": {},
+   "source": [
+    "Expected water profile for nx loop 012: 1500, 4500  \n",
+    "Expected water profile for nx loop 0123: 1500, 4500, 12000, 13000  \n",
+    "Expected water profile for nx loop 0213: 11000, 10500, 11500  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5fd018f-1cb8-46bf-918d-ca6e8418105e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_dict[SCENARIOID][0][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f331736-30f9-4d8c-ad5f-c1dacd693a48",
+   "metadata": {},
+   "source": [
+    "Expected loops: none"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b64d46-86d1-4fca-9c98-585f3bc90752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_dict[SCENARIOID][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dacfd201-8805-4f10-8ace-4a6a011ffc86",
+   "metadata": {},
+   "source": [
+    "### Adding three POIs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4f51bb-1c91-467b-9d6c-e88e5606c489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois_orig.drop(pois_orig.index, inplace=True)\n",
+    "new_pois = gpd.GeoDataFrame(\n",
+    "    {\n",
+    "        \"category\": [\"facility\", \"facility\", \"attraction\"],\n",
+    "        \"geometry\": [\n",
+    "            Point([(600000, 592000)]),\n",
+    "            Point([(603000, 600000)]),\n",
+    "            Point([(601400, 607000)]),\n",
+    "        ],\n",
+    "    }\n",
+    ")\n",
+    "pois_orig = gpd.GeoDataFrame(pd.concat([pois_orig, new_pois], ignore_index=True))\n",
+    "pois_orig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02917b58-45d0-47b6-a109-be3306927cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois_snapped = snap_pois(pois_orig, edges)\n",
+    "pois_snapped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "819fb9c4-8ae9-41f3-bb29-b8b3e480ee60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges = update_poi_attributes(edges, pois_snapped)\n",
+    "edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b8779ea-5f2e-4f6c-aa37-603009d1f963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gnx = momepy.gdf_to_nx(edges, approach=\"primal\", integer_labels=True, multigraph=False)\n",
+    "allloops, alllooplengths, allloopnumnodes, allloopmaxslopes = get_allloops_nx(Gnx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d3bdfdc-7785-42dc-8b70-9140db240365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCENARIOID = 2\n",
+    "allloops_dict[SCENARIOID][0] = restrict_scenario(allloops, allloops, level=0)\n",
+    "allloops_dict[SCENARIOID][1] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][0], level=1\n",
+    ")\n",
+    "allloops_dict[SCENARIOID][2] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][1], level=2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5b46b60-1ad1-4ddc-9059-c673fcd97db5",
+   "metadata": {},
+   "source": [
+    "Expected water profile for nx loop 012: 1500, 4500, 7000  \n",
+    "Expected water profile for nx loop 0123: 1500, 4500, 12000, 13000  \n",
+    "Expected water profile for nx loop 0213: 4000, 7000, 10500, 11500  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ee86cbb-61f7-49a9-a7e5-7748a3121646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_dict[SCENARIOID][0][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8ec0490-6ce5-4a09-94cd-1a8691be8f13",
+   "metadata": {},
+   "source": [
+    "Expected loops for nx node 2: 201"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "846f41c0-1364-418f-bf59-d46280460bc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_dict[SCENARIOID][2][2]"
    ]
   }
  ],
