Bugfix: Call get_vertex_loopnums with log2
Discontinue 06

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-12"
+    "Last modified: 2025-08-20"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "outputs": [],
    "source": [
     "edges_has_water_wmh3.plot(column=\"has_water\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Has water (weighted)\")\n",
+    "plt.title(\"Water provision (weighted)\")\n",
     "plt.gca().axis(\"off\");"
    ]
   },
@@ -806,7 +806,7 @@
     "            \"count\": \"Node density\",\n",
     "            \"weight\": \"Length\",\n",
     "            \"max_slope\": \"Maximum gradient\",\n",
-    "            \"has_water\": \"Has water\",\n",
+    "            \"has_water\": \"Water provision\",\n",
     "            \"poi_diversity\": \"POI diversity\",\n",
     "        }\n",
     "    )\n",
@@ -840,7 +840,7 @@
     "            \"count\": \"Node density\",\n",
     "            \"weight\": \"Length\",\n",
     "            \"max_slope\": \"Maximum gradient\",\n",
-    "            \"has_water\": \"Has water\",\n",
+    "            \"has_water\": \"Water provision\",\n",
     "            \"poi_diversity\": \"POI diversity\",\n",
     "        }\n",
     "    )\n",
@@ -867,7 +867,7 @@
     "fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(14, 3))\n",
     "\n",
     "y = nodesh3[\"count\"].to_list()\n",
-    "xlabels = [\"Length\", \"Maximum gradient\", \"Has water\", \"POI diversity\"]\n",
+    "xlabels = [\"Length\", \"Maximum gradient\", \"Water provision\", \"POI diversity\"]\n",
     "\n",
     "nonnanmask = ~np.isnan(dfunified_properties_weighted[xlabels[3]].to_list())\n",
     "\n",
@@ -945,7 +945,7 @@
     "    rownum = 0\n",
     "    axes = axrows[rownum]\n",
     "    y = nodesh3[\"count\"].to_list()\n",
-    "    xlabels = [\"Length\", \"Maximum gradient\", \"Has water\", \"POI diversity\"]\n",
+    "    xlabels = [\"Length\", \"Maximum gradient\", \"Water provision\", \"POI diversity\"]\n",
     "\n",
     "    nonnanmask = ~np.isnan(dfunified_properties_weighted[xlabels[3]].to_list())\n",
     "\n",
