--- a/code/discontinued/06_poi_experiments.ipynb
+++ b/code/discontinued/06_poi_experiments.ipynb
@@ -14,13 +14,15 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
+    "The rationale of this notebook was based on a bug.\n",
+    "\n",
     "This notebook experiments with adding more POIs, creating new loop censuses, for scenario 2.  \n",
     "Please select `denmark` as the `study_area`, and `scenarioid: 2` in the `config.yml`.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-11  \n",
-    "Last modified: 2025-08-14"
+    "Last modified: 2025-08-20"
    ]
   },
   {
@@ -115,6 +117,7 @@
    "outputs": [],
    "source": [
     "experiment_setups = {\n",
+    "    \"bestpossible\": {},\n",
     "    \"random\": {},\n",
     "    \"waterprovision\": {},\n",
     "    \"loopbits\": {},\n",
@@ -122,6 +125,7 @@
     "    \"wplbnd\": {},\n",
     "}\n",
     "experiment_results = {\n",
+    "    \"bestpossible\": {},\n",
     "    \"random\": {},\n",
     "    \"waterprovision\": {},\n",
     "    \"loopbits\": {},\n",
@@ -470,6 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "experiment_setups[\"bestpossible\"][\"cellpopulation\"] = nodesh3\n",
     "experiment_setups[\"random\"][\"cellpopulation\"] = nodesh3\n",
     "experiment_setups[\"waterprovision\"][\"cellpopulation\"] = q_wp15\n",
     "experiment_setups[\"loopbits\"][\"cellpopulation\"] = q_lb30\n",
@@ -522,16 +527,27 @@
     "    nodepop = experiment_setups[experimentid][\"nodepopulation\"].loc[\n",
     "        experiment_setups[experimentid][\"nodepopulation\"] == True\n",
     "    ]\n",
-    "    for poistoadd in addpoisnums:\n",
+    "    if experimentid == \"bestpossible\":  # Add POIs to all nodes\n",
+    "        poistoadd = len(nodepop)\n",
     "        experiment_results[experimentid][poistoadd] = {\n",
     "            \"nodesamples\": [],  # This is a list of lists of the node indices that are sampled in each run\n",
     "            \"nodeloopnums\": [],  # This is a list of lists of the loop numbers found in each run\n",
     "        }\n",
-    "        for run in range(runsperexperiment):\n",
-    "            experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
-    "                list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
-    "            )\n",
-    "            c += 1\n",
+    "        experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
+    "            list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
+    "        )\n",
+    "        c += 1\n",
+    "    else:  # Add POIs to a sample of nodes\n",
+    "        for poistoadd in addpoisnums:\n",
+    "            experiment_results[experimentid][poistoadd] = {\n",
+    "                \"nodesamples\": [],  # This is a list of lists of the node indices that are sampled in each run\n",
+    "                \"nodeloopnums\": [],  # This is a list of lists of the loop numbers found in each run\n",
+    "            }\n",
+    "            for run in range(runsperexperiment):\n",
+    "                experiment_results[experimentid][poistoadd][\"nodesamples\"].append(\n",
+    "                    list(nodepop.sample(poistoadd, axis=\"index\").index)\n",
+    "                )\n",
+    "                c += 1\n",
     "print(\n",
     "    \"Sampled \"\n",
     "    + str(c)\n",
@@ -572,9 +588,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for experimentid in [\"wplbnd\"]:  # experiment_results.keys():\n",
+    "for experimentid in [\"bestpossible\"]:  # experiment_results.keys():\n",
     "    for poistoadd in addpoisnums:\n",
     "        for run in [0]:  # range(runsperexperiment):\n",
+    "            if experimentid == \"bestpossible\":  # Just run this one once\n",
+    "                poistoadd = len(experiment_setups[experimentid][\"nodepopulation\"])\n",
+    "                if experiment_results[experimentid][poistoadd][\"nodeloopnums\"]:\n",
+    "                    continue  # Already done, so skip the loop\n",
+    "            print(poistoadd)\n",
+    "\n",
     "            # Step 1: Add additional POIs from node samples\n",
     "            nodesample = experiment_results[experimentid][poistoadd][\"nodesamples\"][run]\n",
     "            pois_new = gpd.GeoDataFrame(\n",
@@ -746,6 +768,26 @@
     "    axes.set_ylim([0, 1.12 * (max(N) + n_upper_outliers)])\n",
     "else:\n",
     "    axes.set_ylim([0, ymaxconst])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a580de4d-76fa-48e3-aa9c-67e5593d4b39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges[\"has_water\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe2f7be5-1e39-4d81-8c3c-5c0f52628a4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges"
    ]
   }
  ],
