--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -486,6 +486,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4d358ec-42da-4817-8325-4e52727c10f6",
+   "metadata": {},
+   "source": [
+    "### Plot all in one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff38674-9b8e-4590-9b19-f7b02f83c5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coding in progress\n",
+    "plotinfo = [\n",
+    "    {\"title\": \"Node density\", \"data\": nodesh3, \"column\": \"count\", \"ticks\": [0, 10, 20]},\n",
+    "    {\n",
+    "        \"title\": \"Maximum gradient\",\n",
+    "        \"data\": edges_max_slope_wmh3,\n",
+    "        \"column\": \"max_slope\",\n",
+    "        \"ticks\": [0, 5, 10],\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"Water provision\",\n",
+    "        \"data\": edges_has_water_wmh3,\n",
+    "        \"column\": \"has_water\",\n",
+    "        \"ticks\": [0, 0.5, 1],\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"POI diversity\",\n",
+    "        \"data\": edges_poi_diversity_wmh3,\n",
+    "        \"column\": \"poi_diversity\",\n",
+    "        \"ticks\": [0, 1, 2, 3],\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=4, figsize=(14, 6))\n",
+    "\n",
+    "for i, ax in enumerate(axes[0]):  # First row: choropleth maps\n",
+    "    # normalize color\n",
+    "    vmin, vmax = 0, plotinfo[i][\"data\"][plotinfo[i][\"column\"]].max()\n",
+    "    norm = mpl.colors.Normalize(vmin=vmin, vmax=vmax)\n",
+    "\n",
+    "    cax = ax.inset_axes([0.8, 0.6, 0.08, 0.35])\n",
+    "    # https://matplotlib.org/stable/users/explain/axes/colorbar_placement.html#manual-placement-of-colorbars\n",
+    "    plotinfo[i][\"data\"].plot(\n",
+    "        column=plotinfo[i][\"column\"],\n",
+    "        legend=True,\n",
+    "        legend_kwds={\"ticks\": plotinfo[i][\"ticks\"], \"cmap\": \"viridis\", \"norm\": norm},\n",
+    "        cax=cax,\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "\n",
+    "    # cbar.set_clim(0,20)\n",
+    "    ax.set_axis_off()\n",
+    "    ax.title.set_text(plotinfo[i][\"title\"])\n",
+    "for ax in axes[1]:  # Second row: LISAs\n",
+    "    pass\n",
+    "\n",
+    "plt.subplots_adjust(\n",
+    "    top=0.93, bottom=0.17, left=0.1, right=0.9, wspace=-0.5, hspace=0.22\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1a60dd82-1770-4edc-910f-3d98e47385e1",
    "metadata": {},
    "source": [
